# amazing-anti-cheat-game-boost-soft

./: .gitignore  readme.md  test_example.proto
agent-rs/: Cargo.toml  build.rs  config.toml
agent-rs/src/: main.rs
deploy/: clickhouse-init.sql  docker-compose.yml
ingest-go/: Dockerfile  go.mod  main.go
ingest-go/proto/: telemetry.proto
proto/: telemetry.proto
