[package]
name = "agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
md5 = "0.7"

[build-dependencies]
prost-build = "0.12"